--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
   <body>
-    <h1>Sumador</h1>
-    <form id="sumar-form">
-      <label for="primer-numero">Primer número:</label>
-      <input type="number" id="primer-numero" />
-      <label for="segundo-numero">Segundo número:</label>
-      <input type="number" id="segundo-numero" />
-      <input type="submit" value="Sumar" />
+    <h1>Post</h1>
+    <form id="twitter-form">
+      <label for="titulo">titulo del post:</label>
+      <input type="text" id="titulo" />
+      <label for="contenido">Contenido detallado del post:</label>
+      <input type="text" id="contenido" />
+      <input type="submit" value="Publicar" />
     </form>
     <div id="resultado-div"></div>
 
